--- a/README
+++ b/README
@@ -6,7 +6,7 @@ There is a good possibility that such humankinds follow likes and interests of c
 of a persons close social circle and can be used to find his/her compatibility with them.
 We are trying to develop a predictive application which analyzes the facebook profile of a person and predicts compatible people and 
 interests for a given person based on his/her Facebook activity. To do so, the application would perform sophisticated analysis of 
-personï¿½s Facebook activity which includes analysis of the following: 
+person’s Facebook activity which includes analysis of the following: 
 -	Age group
 -	Profession 
 -	Gender 
@@ -19,7 +19,7 @@ personï¿½s Facebook activity which includes analysis of the following:
 -	Likes 
 Interests of compatible people found from the above analysis are suggested to the person. We plan to use the Facebook/Graph/User API 
 which gives access to all the above mentioned attributes of the user. Algorithm for numerological and zodiac compatibility can be developed 
-using the userï¿½s birthdate. Name compatibility algorithm is based on the sequence of vowels and consonants in the name. 
+using the user’s birthdate. Name compatibility algorithm is based on the sequence of vowels and consonants in the name. 
 The combination of all the above attributes can give a strong compatibility analysis for the user. For example, Aries and Taurus have strong 
 zodiac compatibility, number 1 and 6 have strong numerological compatibility, name Adam and Eve have strong name compatibility (about 86%).
 Why are we doing this?
@@ -27,5 +27,3 @@ This application is purely for entertainment purpose. This application would ent
 compatible people and their interests, if not his/her close social circle. Apart from the entertainment value, knowing the interests of 
 a person could be very useful when it comes to deciding gifts for him/her or shopping for special occasions. 
 It would also help improve advertisement by suggesting the user likes of his/her close friends. And more over there is no such application for Facebook yet. 
-http://www.sevenreflections.com/more/chaldean-numerology/
-http://numerology-thenumbersandtheirmeanings.blogspot.com/p/relationship-compatibility.html
